tests/baselines/reference/checkJsdocTypeTagOnExportAssignment3.errors.txt
tests/cases/compiler/a.js(10,16): error TS2739: Type '{ c: number; }' is missing the following properties from type 'Foo': a, b


==== tests/cases/compiler/checkJsdocTypeTagOnExportAssignment3.js (0 errors) ====
    
==== tests/cases/compiler/a.js (1 errors) ====
    /**
     * @typedef {Object} Foo
     * @property {boolean} a
     * @property {boolean} b
     */
    
    const bar = { c: 1 };
    
    /** @type {Foo} */
    export default bar;
                   ~~~
!!! error TS2739: Type '{ c: number; }' is missing the following properties from type 'Foo': a, b
    
==== tests/cases/compiler/b.js (0 errors) ====
    import a from "./a";
    a;
    